--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
         <ul>
             <li v-for="task in tasks">{{ task }}</li>
         </ul>
-        <form>
+        <form v-on: submit.prevent = "saveNewTask">
             <label for="new-item">Add task</label>
             <input type="text" id="new-item"/>
             <input type="submit"/>
