--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
         </ul>
         <form v-on: submit.prevent = "saveNewTask">
             <label for="new-item">Add task</label>
-            <input type="text" id="new-item"/>
-            <input type="submit"/>
+            <input id="new-item" type="text" v-model="newTask"/>
+            <input type="submit" value="Save New Task"/>
         </form>
 
     </div>
